28 September 2020: Wouter
	- Fix unit test for dnstap changes, so that it waits for the timer.

23 September 2020: Wouter
	- Fix #305: dnstap logging significantly affects unbound performance
	  (regression in 1.11).
	- Fix #305: only wake up thread when threshold reached.
	- Fix to ifdef fptr wlist item for dnstap.

23 September 2020: Ralph
	- Fix edns-client-tags get_option typo
	- Add edns-client-tag-opcode option
	- Use inclusive language in configuration

21 September 2020: Ralph
	- Fix #304: dnstap logging not recovering after dnstap process restarts

21 September 2020: Wouter
	- Merge PR #311 by luismerino: Dynlibmod leak.
	- Error message is logged for dynlibmod malloc failures.
	- iana portlist updated.

18 September 2020: Wouter
	- Fix that prefer-ip4 and prefer-ip6 can be get and set with
	  unbound-control, with libunbound and the unbound-checkconf option
	  output function.
	- iana portlist updated.

15 September 2020: George
	- Introduce test for statistics.

15 September 2020: Wouter
	- Spelling fix.

11 September 2020: Wouter
	- Remove x file mode on ipset/ipset.c and h files.

9 September 2020: Wouter
	- Fix num.expired statistics output.

31 August 2020: Wouter
	- Merge PR #293: Add missing prototype.  Also refactor to use the new
	  shorthand function to clean up the code.
	- Refactor to use sock_strerr shorthand function.
	- Fix #296: systemd nss-lookup.target is reached before unbound can
	  successfully answer queries. Changed contrib/unbound.service.in.

27 August 2020: Wouter
	- Similar to NSD PR#113, implement that interface names can be used,
	  eg. something like interface: eth0 is resolved at server start and
	  uses the IP addresses for that named interface.
	- Review fix, doxygen and assign null in case of error free.

26 August 2020: George
	- Update documentation in python example code.

24 August 2020: Wouter
	- Fix that dnstap reconnects do not spam the log with the repeated